--- a/src/main/resources/templates/aboutme.html
+++ b/src/main/resources/templates/aboutme.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
     <style>
         a:link, a:visited{
@@ -17,7 +18,7 @@
         }
         pre{
             font-family: Trebuchet MS;
-            font-size: 16px;
+            font-size: 20px;
         }
     </style>
 </head>
@@ -33,7 +34,7 @@
 
 </nav>
 <br>
-<h3>How it started...</h3>
+<h3 style="font-size: 24px">How it started...</h3>
 
 <p>
     <pre>
@@ -43,6 +44,10 @@
     guests loved the cake.
 </pre>
 
+</p>
+<p>
+    <img src="https://scontent.frix3-1.fna.fbcdn.net/v/t1.6435-9/66394246_715261295583582_2629615648489078784_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=cdbe9c&_nc_ohc=hUSVsvCMXugAX-iMESW&_nc_ht=scontent.frix3-1.fna&oh=00_AT-uhyPrKHVV0u516G49KL7P0cAIcJuvVLtwcgEy7ok8YA&oe=622C9F0F"
+         alt="Cake with blue butterflies" style="float: right; width: 488px; height: 511px; padding-right: 300px; padding-bottom: 300px">
 </p>
 
 
