--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
     <style>
         a:link, a:visited{
@@ -30,7 +31,7 @@
 
 </nav>
 </header>
-<p style="font-family: Trebuchet MS; font-size: 16px">
+<p style="font-family: Trebuchet MS; font-size: 20px">
 
         Phone no: 126-789-954<br>
         e-mail: lbs@yahoo.com<br>
