--- a/src/main/resources/templates/experience.html
+++ b/src/main/resources/templates/experience.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience</title>
     <style>
         a:link, a:visited{
@@ -18,6 +19,7 @@
         h3{
             color:darkslateblue;
             font-family: 'Trebuchet MS';
+            font-size: 24px;
 
         }
     </style>
@@ -35,10 +37,10 @@
 
     </nav>
 </header>
-<hr>
+
 <main>
     <h3>Education</h3>
-    <section style="font-family: 'Trebuchet MS'; font-size: 16px">
+    <section style="font-family: 'Trebuchet MS'; font-size: 20px">
         <div>
              <span><b>Education:</b></span>
                 <span>Jelgavas Amatu vidusskola (Lifelong learning project)</span>
@@ -49,7 +51,7 @@
             </div>
 
     </section>
-    <section style="font-family: 'Trebuchet MS'; font-size: 16px">
+    <section style="font-family: 'Trebuchet MS'; font-size: 20px">
         <br>
         <div>
             <span><b>Internship:</b></span>
@@ -63,7 +65,7 @@
     </section>
 
     <h3>Achievements</h3>
-    <section style="font-family: 'Trebuchet MS'; font-size: 16px">
+    <section style="font-family: 'Trebuchet MS'; font-size: 20px">
         <div>
             <span><b>Awards:</b></span>
             <span>Second place in the competition "Latvia's tastiest cake"</span>
