--- a/src/main/resources/templates/portfolio.html
+++ b/src/main/resources/templates/portfolio.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         a:link, a:visited{
             background-color: darkslateblue;
@@ -33,13 +34,14 @@
 
 <main>
 
-    <h3 style="color:darkslateblue; font-family: 'Trebuchet MS'; font-size: large">My works</h3>
+    <h3 style="color:darkslateblue; font-family: 'Trebuchet MS'; font-size: 24px">My works</h3>
     <br>
     <img src="https://scontent.frix3-1.fna.fbcdn.net/v/t1.6435-9/48372379_599961137113599_2738387262923341824_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=cdbe9c&_nc_ohc=7FG0SOcr7CoAX8UoDE4&_nc_ht=scontent.frix3-1.fna&oh=00_AT9LyOBQv42IUmeqi737UctseassgrtX5rVSkjUL8dk3Ew&oe=622B3260"
          style="width:200px; height:200px;"  alt="Cake image"/>
+    <img src="images/cake.jpg" alt="test"  style="width:200px; height:200px"/>
     <br>
     <br>
-    <p style="font-family: 'Trebuchet MS'; font-size: 16px">Please visit Facebook for all my works</p>
+    <p style="font-family: 'Trebuchet MS'; font-size: 20px">Please visit Facebook for all my works</p>
     <br>
 <a href="https://www.facebook.com/ligaskukas/photos_by" target="_blank">My works in Facebook</a>
 </main>
